[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passtk"
version = "0.6.5"
description = "A tool to generate random password."
authors = [
    {name = "Tanky Woo", email = "me@tankywoo.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/tankywoo/passtk"
Repository = "https://github.com/tankywoo/passtk"

[project.scripts]
passtk = "passtk.passtk:main"

[tool.uv]
dev-dependencies = [
    "pytest>=3.0",
    "flake8",
]